--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,5 +1,6 @@
 <div ng-app="WAMO">
 	<a href="#/ryu" id="ryu">ryu</a>
 	<a href="#/chunli" id="chunli">chunli</a>
-	<div ng-view></div>
+	<div ui-view="movelist"></div>
+	<div ui-view="followup"></div>
 </div>
