--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,6 +1,7 @@
-<div ng-app="WAMO">
+<div class= "container" ng-app="WAMO">
 	<a href="#/ryu" id="ryu">ryu</a>
 	<a href="#/chunli" id="chunli">chunli</a>
+	<a href="#/dudley" id="dudley">dudley</a>
 	<div ui-view="movelist"></div>
 	<div ui-view="followup"></div>
 </div>
