--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,7 +1,9 @@
-<div class= "container" ng-app="WAMO">
-	<a href="#/ryu" id="ryu">ryu</a>
-	<a href="#/chunli" id="chunli">chunli</a>
-	<a href="#/dudley" id="dudley">dudley</a>
+<div class="container" ng-app="WAMO">
 	<div ui-view="movelist"></div>
 	<div ui-view="followup"></div>
+	<menu icon="glyphicon glyphicon-chevron-right" visibility="visibility">
+		<a href="#/ryu" id="ryu">ryu</a>
+		<a href="#/chunli" id="chunli">chunli</a>
+		<a href="#/dudley" id="dudley">dudley</a>
+	</menu>
 </div>
